--- a/internal/mindPalace/config.yaml
+++ b/internal/mindPalace/config.yaml
@@ -2,7 +2,8 @@ system:
   http:
     host: '0.0.0.0'
     port: 8080
-    timeout: 5
+    read_timeout: 5
+    write_timeout: 5
   grpc:
     port: 10000
   db:
